gccida/g2/do_jump_by_parts_greater_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/expr.c:10220:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/expr.c:10263:31: error: invalid suffix 'orce' on integer constant
v10 = operand_sub*(short *)0xforce( op0, v9, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/expr.c:10263:7: error: use of undeclared identifier 'operand_sub'
v10 = operand_sub*(short *)0xforce( op0, v9, mode); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/expr.c:10264:31: error: invalid suffix 'orce' on integer constant
v11 = operand_sub*(short *)0xforce( op1, v9, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/expr.c:10264:7: error: use of undeclared identifier 'operand_sub'
v11 = operand_sub*(short *)0xforce( op1, v9, mode); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/expr.c:10267:56: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v10, v11, GT, v12, *(short *)0xmode, 0LL, 0LL, if_true_labela); 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/expr.c:10268:67: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v10, op1_word, NE, unsignedp, *(short *)0xmode, 0LL, 0LL, if_false_labela); 
                                                                  ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_jump_by_parts_greater_rtx/src/obj/expr.o] Error 1
